# SFTt

./: CMakeLists.txt  README.md  main.cpp
include/: Perulinu.h  average2D.h  basic_noise.h  berlin_noise.h  color.h  jubog_noise.h  linear_wave_noise.h  notTrueRandom.h  perlin_noise.h  random_noise.h  self_renderer.h
include/interface/: noise.h  self_renderer.h
lib/: average2D.cpp  basic_noise.cpp  berlin_noise.cpp  jubog_noise.cpp  linear_wave_noise.cpp  notTrueRandom.cpp  random_noise.cpp
